--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "description": "Implements the dnode protocol abstractly",
     "version": "0.0.1",
     "repository": "https://github.com/substack/dnode-protocol.git",
-    "author": "James Halliday <mail@substack.net> (http://substack.net)",
+    "author": {
+        "name" : "James Halliday",
+        "email" : "mail@substack.net",
+        "url" : "http://substack.net"
+    },
     "main": "./index.js",
     "dependencies" : {
         "traverse" : ">=0.3.1"
@@ -11,5 +15,5 @@
     "scripts": {
         "test": "expresso"
     },
-    "engines": {}
+    "engines": { "node" : ">=0.2.0" }
 }
